--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Home assistant add-ons of ElVit
+name: Home assistant add-ons of ElVit (EDIT)
 url: https://github.com/elvit/hassio-addons
 maintainer: ElVit
